--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="librairies/guava-25.0-jre.jar"/>
 	<classpathentry kind="lib" path="librairies/okhttp-3.11.0.jar"/>
 	<classpathentry kind="lib" path="librairies/okio-1.14.0.jar"/>
+	<classpathentry kind="src" path="drivers"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
